Replace unnecessary usages of guava's Sets by standard library methods